# Triangle_workflow

./: .gitignore  Manifest.toml  Project.toml  README.md  Snakefile  output.h5.toml  pyproject.toml
data/init_topo/: example_init_topo.csv
data/sea-level_curves/: Auto000_Allo000_Stoch100V1.txt  Auto000_Allo000_Stoch100V2.txt  Auto000_Allo000_Stoch100V3.txt
data/strat_cols/: Auto000_Allo000_Stoch100V1_sc.csv
src/CarboCATLite/: calculateErrorBetweenMarginTrajectory.m  calculateFaciesCAProdDependent.m  calculateFaciesCARotationOrder.m  calculateFaciesCAWaveDependent.m  calculateFaciesCAWaveDependentHybrid.m  calculateFaciesWaveDependentSimple.m  calculatePlatformMarginTrajectory.m  calculateProduction.m  calculateProductionWDAdjustment.m  calculateProductionWaveEnergyAdjustment.m  calculateSubsidence.m  calculateTransport.m  calculateTransportCrossPlatform.m  calculateTransportFraction.m  calculateWaterDepth.m  calculateWaveEnergy.m  carboCATGUI.m  diffuseConcentration.m  diffuseSiliciclastic.m  getData.m  initialiseModelGridArrays.m  initializeOneModelVariables.m  inputOneModelParams.m  plot3DBlock.m  plotCrossSectionDip2D.m  plotCrossSectionDip3D.m  plotCrossSectionStrike3D.m  plotDipSections.m  plotEustaticCurve.m  plotFaciesVolumeCurves.m  plotFinalGraphics.m  plotInitialGraphics.m  plotWaveEnergyProfile.m  recordFaciesVolumes.m  runCAModelGUI.m
src/CarboCAT_utils/: Auto000_Allo000_Stoch100V1_sc.mat  get_adm.m  get_sl.m  get_strat_column.m  get_strat_columns.m  get_wd.m  strat_col.mat.mat
src/Julia/: Autocyclicity.jl  Box_dimension_scan.jl  external_SL.jl  (+1 more)
(+14 files in other folders)
