[tool.poetry]
name = "triangle-workflow"
version = "0.1.0"
description = ""
authors = ["Emilia Jarochowska <e.b.jarochowska@uu.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
snakemake = "^8.20.5"
ibridges = "^1.1.0"
ibridges-servers-uu = "^0.1.0"
snakemake-storage-plugin-irods = {path = "../snakemake-storage-plugin-irods", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
